<resources>
    <string name="app_name">Restaurant</string>
    <string name="tel">02&#8211;123&#8211;4567</string>
    <string name="R_name">다바타식당</string>
    <string name="address">서울특별시 성북구 삼선교로16길 54</string>
    <string name="time">오전11시~오후10시</string>
    <string name="type">식사류</string>
    <string name="no_location_detected">No location!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_animation">Animation</string>
    <string name="title_activity_show">Show</string>

</resources>
